CHANGES IN VERSION 1.27
-----------------------

BUG FIX

    o (1.27.2) Correct path to R license database file by calling R.home('share').
    o (1.27.3) Correct check for if package already exists in CRAN/Bioc
    o (1.27.3) Correct check for single colon use


NEW FEATURES

    o (1.27.1) Check that licenses do not exclude classes of users,
    e.g., non-academic users.

CHANGES IN VERSION 1.25
-----------------------

DEPRECATION ANNOUNCEMENT

    o (1.25.11) R CMD BiocCheck and R CMD BiocCheckGitClone are deprecated. The
    recommended way to run the functions is within R.

NEW FEATURES

    o (1.25.4) Check for single colon typos when using qualified imports pkg::foo()
    o (1.25.1) Check for warning/notes on too-brief a Description: field
    (@federicomarini, #65)
    o (1.25.8) Validate ORCID IDs (if any) in the DESCRIPTION file
    (@LiNk-NY, #97)
    o (1.25.10) Add check for properly formatted CITATION file
    o (1.25.12) Add NOTE to change dontrun to donttest

BUG FIXES

    o (1.25.14) The ORCID ID check now accepts IDs with a X at the end.
    o (1.25.9) All packages including infrastructure require a vignette
    o Usage of donttest and dontrun in manual pages tagged with the keyword
    'internal' will no longer trigger a NOTE (@grimbough, #59)
    o (1.25.7) Adding the sessionInfo at the end of the vignette (@llrs)

USER SIGNIFICANT CHANGES

    o (1.25.3) Require Aurhors@R format over Author/Maintainer fields in the
    DESCRIPTION file. This has been upgraded to an ERROR.
    o (1.25.2) Resolve <https://github.com/Bioconductor/BiocCheck/issues/57>: Suggest
    styler over formatR for automatic code re-formatting.
    o (1.25.5) Add warning to new package versions with non-zero x version
    (@mtmorgan, #101)


CHANGES IN VERSION 1.23
-----------------------

BUG FIX

    o (1.23.4) Update locations for NEWS
    o (1.23.1) Fix False Positive class == check

CHANGES IN VERSION 1.19
-----------------------

NEW FEATURES
