@@ -306,6 +306,11 @@ If the package `codetoolsBioC` is installed, `BiocCheck` will run it
 to see if it has suggestions for the "Imports" section of your package
 NAMESPACE.
 
+## .Rbuildignore checks
+
+* **Checking .Rbuildignore...** ensures that the 'tests' folder is
+  not accidentally added to the `.Rbuildignore` file (`ERROR`).
+
 `codetoolsBioC` is an experimental package that is not presently
 available via `BiocManager::install()`. It is available from our
 [Subversion repository][7] with the credentials readonly/readonly.
@@ -728,8 +733,8 @@ file is therefore checked in its raw original form.
 
 **Checking that CITATION file is correctly formatted**
 
-`BiocCheck` tries to read the provided `CITATION` file (i.e. not the one 
-automatically generated by each package) with `readCitationFile()` - this is  
+`BiocCheck` tries to read the provided `CITATION` file (i.e. not the one
+automatically generated by each package) with `readCitationFile()` - this is
 expected to be in the `INST` folder (`NOTE`). `readCitationFile()` needs to work
 properly without the package being installed. Most common causes of failure
 occur when trying to use helper functions like packageVersion() or packageDate()
